# x64dbgplugin

./: CMakeLists.txt
src/: plugin.c  plugin.h
